--- a/main.hbs
+++ b/main.hbs
@@ -25,6 +25,7 @@
           {{> skills }}
           {{> languages }}
           {{> interests }}
+          {{> references }}
         </div>
       </article>
     </main>
