Changes:  - Add editorconfig for unified formatting.  - Update skills to be more compact - now uses a two-column layout for keywords.  - More style updates, with sharper (which is better?) font and slight color tweaks.

--- a/partials/skills.hbs
+++ b/partials/skills.hbs
@@ -3,7 +3,7 @@
     <section class="sectionLeft">
       <h2 class="resumeSection">Skills</h2>
     </section>
-    <section class="sectionRight" id="skills">
+    <section class="sectionRight" id="skills" class="list">
       {{#each resume.skills}}
         <div class="skills">
           {{#if name}}
