Changes:  - Add support for keywords on projects.  - Add sample for PDF generated from print dialog.  - Fix .gitignore.

--- a/partials/interests.hbs
+++ b/partials/interests.hbs
@@ -12,10 +12,10 @@
                 <h3 class="title">{{name}}</h3>
               {{/if}}
               {{#if keywords.length}}
-                <div class="description">
+                <div>
                   <p>
                     {{#each keywords}}
-                      <span class="keyword">{{.}}</span>
+                      <span class="keyword lowercase">{{.}}</span>
                     {{/each}}</p>
                 </div>
               {{/if}}
